Pinning refactoring and API docs update
